--- a/src/components/logoWall.astro
+++ b/src/components/logoWall.astro
@@ -1,19 +1,19 @@
 ---
 const technologies = [
-  "astro",
-  "vue",
-  "react",
-  "typeScript",
-  "tailwindcss",
+  "express",
   "next",
+  "react",
   "nodejs",
+  "typeScript",
+  "javaScript",
+  "tailwindcss",
+  "astro",
+  "mongoDB",
+  "MySQL",
+  "git",
   "HTML5",
   "CSS3",
-  "javaScript",
-  "git",
-  "supabase",
-  "mysql",
-  "bash",
+  
 ];
 ---
 
