--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,12 +13,11 @@ const { title } = Astro.props;
     <meta name="description" content="Software Developer" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <meta property="og:title" content="Oscar Hernandez" />
+    <meta property="og:title" content="Diego Torres" />
     <meta property="og:description" content="Software Developer" />
-    <meta property="og:image" content="https://oscarhernandez.vercel.app/og.image.png" />
     <meta property="og:url" content="https://oscarhernandez.vercel.app" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Oscar Hernandez Portfolio" />
+    <meta property="og:site_name" content="Diego Torres Portfolio" />
 
     <title>{title}</title>
   </head>
@@ -32,7 +31,7 @@ const { title } = Astro.props;
 
   :root {
     --background: #101010;
-    --sec: #a476ff;
+    --sec: #1949c3;
     --white: #dfdfdf;
     --white-icon: #f3f3f398;
     --white-icon-tr: #f3f3f310;
